# ips4o_rs

./: Cargo.toml  LICENSE  README.md
benches/: distributions.rs  my_benchmark.rs  plot.py
src/: bucket_pointers.rs  classifier.rs  constants.rs  lib.rs  permute_blocks.rs  sequential.rs  storage.rs
src/base_case/: insertion_sort.rs  mod.rs
src/base_case/insertion_sort/: insertion_sort_heinenen.rs  insertion_sort_jwiesler.rs  insertion_sort_std.rs
src/crum_analyze/: glidesort_merge.rs  mod.rs  partition_friendly.rs  quadsort.rs
src/crum_analyze/glidesort_merge/: branchless_merge.rs  gap_guard.rs  merge_reduction.rs  mut_slice.rs  physical_merges.rs  small_sort.rs  tracking.rs  util.rs
src/parallel/: empty_block_movement.rs  mod.rs
src/util/: debug_assertions.rs  mod.rs
