[package]
name = "ips4o_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.6"
portable-atomic = "1.3"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
num-traits = "0.2.15"

[[bench]]
name = "my_benchmark"
harness = false
